# acml_dsri_test

./: Report.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Report-checkpoint.ipynb  pyproject-checkpoint.toml
saved_model/my_model/: keras_metadata.pb  saved_model.pb
saved_model/my_model/variables/: variables.data-00000-of-00001  variables.index
saved_model/my_model_2/: keras_metadata.pb  saved_model.pb
saved_model/my_model_2/variables/: variables.data-00000-of-00001  variables.index
tests/: test_acml.py
