[tool.poetry]
name = "acml"
version = "0.1.0"
description = ""
authors = ["Mavrokefalidis <lgubm23@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
pandas = "^1.3.4"
jupyterlab = "^3.2.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
tensorflow = "^2.7.0"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
